# RadicleApp

./: .gitignore  .gitmodules  README.md  print_heartwood_structure.sh
Docs/: rust_swift_integration.md
RadicleApp/: CommitDetailView.swift  CommitDetailViewModel.swift  CommitResponse.swift  ContentView.swift  Info.plist  IssueDetailView.swift  Item.swift  Models.swift  NetworkService.swift  RadicleAppApp.swift  Repository.swift  RepositoryDetailView.swift  RepositoryListView.swift  RepositorySourceView.swift  RepositoryViewModel.swift
RadicleApp.xcodeproj/: project.pbxproj
RadicleApp/API/: APIClient.swift  CommitService.swift  FileService.swift  IssuesService.swift  NodeService.swift  PatchService.swift  RepositoryService.swift
RadicleApp/Models/: Code.swift  Commit.swift  Diff.swift  File.swift  Issue.swift  Node.swift  Patch.swift  Repository.swift  RepositoryModel.swift
RadicleApp/Navigation/: LinkButton.swift  PageLinkButton.swift
RadicleApp/RadicleInterop/: RustInterop.swift
RadicleApp/Utils/: CacheManager.swift  Colors.swift  DateUtils.swift
RadicleApp/ViewModels/: GitViewModel.swift  PatchViewModel.swift  RepositoryViewModel.swift
RadicleApp/Views/: Repository.swift  RepositoryCardView.swift  (+3 more)
RadicleAppTests/: RadicleAppTests.swift
RadicleAppUITests/: RadicleAppUITests.swift  RadicleAppUITestsLaunchTests.swift
RepoAPI/: Package.swift  docker-compose.yml
RustCore/ios-bridge/: Cargo.toml  README.md  build.rs  build_ios.sh  cbindgen.toml
RustCore/ios-bridge/include/: heartwood_bridge.h
RustCore/ios-bridge/src/: ios_bridge.rs  lib.rs
(+118 files in other folders)
