[package]
name = "heartwood_ios_bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "heartwood_ios_bridge"
crate-type = ["staticlib", "cdylib"]

[dependencies]
radicle-cli = { path = "../Heartwood/radicle-cli" }
radicle = { path = "../Heartwood/radicle" }
radicle-node = { path = "../Heartwood/radicle-node" }
anyhow = "1.0"
libc = "0.2"
git2 = { version = "0.19.0", features = ["vendored-libgit2"] }

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]
